# MRPNN-Unity

./: .gitignore  README.md
CudaDll-VS-Files/: CMakeLists.txt
CudaDll-VS-Files/core/: CUDA-D3D11.cu  Timer.cu  Timer.cuh  radiancePredict.cu  render.cuh  volume.cu  volume.hpp
MRPNN_Unity_Interop_2/: Cuda_Unity_Direct.txt  Notes for stats.txt  cleanup.txt  readingFile.txt  timings.txt
MRPNN_Unity_Interop_2/Assets/: Wow.renderTexture
MRPNN_Unity_Interop_2/Assets/Editor/: unload_DLL.cs
MRPNN_Unity_Interop_2/Assets/Mats/: Debug_Cuda_Tex.mat  Def_Mat 1.mat  Def_Mat 2.mat  Def_Mat 3.mat  Def_Mat.mat  DepthTextureShader.shader  debug_mat_depth.mat
MRPNN_Unity_Interop_2/Assets/Scenes/: DarkScene.unity  Flip Tecxture with Cuda.unity  Render Could.unity
MRPNN_Unity_Interop_2/Assets/Scripts/: Blit_Post_Render.cs  CudaUnitDirect3D.cs  GetCloud.cs  HDRISaver.cs  MoveCam.cs  Pass_Depth.cs  SetResolution.cs  SetTargetFPS.cs  Texture3D_Interop.cs
MRPNN_Unity_Interop_2/Assets/Scripts/Old Code/: Cuda_d3d11_Interop.cs  Test D3D11 Old.cs  (+1 more)
MRPNN_Unity_Interop_2/Assets/Shaders/: AccumulateTransmittance.compute  CollectDepth.shader  Depth_To_Lin_Mat.mat  Invert_Depth.shader  MRPNN_Cloud.shader
MRPNN_Unity_Interop_2/BackupScr/: Backup for cuda cu.txt  Backup.txt  Cuda_Unity_Direct.txt  DLL Backup.txt  GoToBed.txt  def backup.txt
MRPNN_Unity_Interop_2/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
MRPNN_Unity_Interop_2/Results/: performance_tests.csv
MRPNN_Unity_Interop_2/Results/ResolutionResults/: performance_tests.csv
MRPNN_Unity_Interop_2/Results/Volume Resolution/: datasteps.py
MRPNN_Unity_Interop_2/UserSettings/: EditorUserSettings.asset
MRPNN_Unity_Interop_2/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt
(+5 files in other folders)
